--- a/index.html
+++ b/index.html
@@ -3,163 +3,136 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ruchitha Katakam | DevOps Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <title>Ruchitha Portfolio</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(-45deg, #f0f8ff, #e6f7ff, #d0eaff, #f5faff);
       background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
-      color: #f2f2f2;
+      animation: gradient 15s ease infinite;
+      color: #333;
     }
 
-    @keyframes gradientBG {
+    @keyframes gradient {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
 
-    header {
-      text-align: center;
-      padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    header p {
-      font-size: 1rem;
-      margin: 0.2rem;
-    }
-
-    main {
-      max-width: 900px;
-      margin: auto;
+    .container {
+      display: flex;
+      flex-wrap: wrap;
       padding: 2rem;
     }
 
-    section {
-      margin-bottom: 2rem;
-      background: rgba(255, 255, 255, 0.05);
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    .left-column, .right-column {
+      flex: 1;
+      min-width: 300px;
+      padding: 1rem;
     }
 
-    h2 {
-      color: #00d4ff;
-      margin-bottom: 1rem;
-      border-bottom: 2px solid #00d4ff;
-      padding-bottom: 0.5rem;
+    .left-column {
+      background-color: #ffffffc9;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .right-column {
+      background-color: #ffffffd9;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1, h2 {
+      color: #004085;
     }
 
     ul {
       padding-left: 1.2rem;
     }
 
-    ul li::marker {
-      color: #00d4ff;
-    }
-
-    span {
-      display: block;
+    li {
       margin-bottom: 0.5rem;
     }
 
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      background-color: rgba(0, 0, 0, 0.6);
-    }
-
-    a {
-      color: #00d4ff;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
+    .section {
+      margin-bottom: 2rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>RUCHITHA KATAKAM</h1>
-    <p><strong>Email:</strong> ruchithakatakm99@gmail.com</p>
-    <p><strong>Phone:</strong> +91 6303476240 / +91 8340894285</p>
-    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ruchitha-r-423409274/" target="_blank">linkedin.com/in/ruchitha-r-423409274</a></p>
-  </header>
-  <main>
-    <section>
-      <h2>Career Objective</h2>
-      <p>Aspiring DevOps/SRE with practical experience in AWS, CI/CD, Linux, Shell Scripting, and cloud-native tooling. Strong focus on automation, observability, and reliability engineering. Eager to contribute to fast-paced DevOps teams.</p>
-    </section>
+  <div class="container">
+    <div class="left-column">
+      <h1>Ruchitha</h1>
+      <p><strong>Email:</strong> ruchithakatakm99@gmail.com</p>
+      <p><strong>Phone:</strong> +91 6303476240 / +91 8340894285</p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ruchitha-r-423409274/" target="_blank">linkedin.com/in/ruchitha-r-423409274</a></p>
 
-    <section>
-      <h2>Work Experience</h2>
-      <p><strong>Company:</strong> OnPassive Private Limited</p>
-      <p><strong>Role:</strong> Associate Cloud Engineer</p>
-      <p><strong>Duration:</strong> July 2023 – March 2025</p>
-      <ul>
-        <li>Designed CI/CD pipelines using Jenkins, GitHub Actions.</li>
-        <li>Monitored with CloudWatch, Nagios, Prometheus.</li>
-        <li>Managed AWS infrastructure: EC2, S3, VPC, CloudFormation.</li>
-        <li>Automated provisioning using Shell Scripting and Python.</li>
-        <li>Implemented IaC using Terraform and Ansible.</li>
-        <li>On-call support, root cause analysis, incident management.</li>
-        <li>Collaborated with dev teams on deployment pipelines.</li>
-      </ul>
-    </section>
+      <div class="section">
+        <h2>Strengths</h2>
+        <ul>
+          <li>Good communication and interpersonal skills</li>
+          <li>Ability to learn new technologies</li>
+          <li>Quick adaptability to different work environments</li>
+        </ul>
+      </div>
 
-    <section>
-      <h2>Technical Skills</h2>
-      <ul>
-        <li>AWS: EC2, ELB, S3, CloudFront, Elastic Beanstalk, SNS</li>
-        <li>DevOps: Docker, Jenkins, Kubernetes, Ansible, Terraform</li>
-        <li>Languages: Python, C, Java, JavaScript</li>
-        <li>Tools: GitHub, GitLab, Bitbucket, Maven</li>
-        <li>OS: Linux, Windows</li>
-      </ul>
-    </section>
+      <div class="section">
+        <h2>Personal Details</h2>
+        <ul>
+          <li><strong>Date of Birth:</strong> 10-09-1999</li>
+          <li><strong>Languages Known:</strong> English, Hindi, Telugu</li>
+          <li><strong>Address:</strong> H No: -7-13A/3, Hanuman Nagar, Chandur, Hyderabad, Telangana - 508255</li>
+        </ul>
+      </div>
+    </div>
 
-    <section>
-      <h2>Education</h2>
-      <ul>
-        <li>B.Tech in EEE – Swami Ramananda Tirtha Institute, 8.4 CGPA (2021)</li>
-        <li>Intermediate – Gowthami Junior College, 97.2% (2017)</li>
-        <li>SSC – Krishnaveni Talent School, 9.8 CGPA (2015)</li>
-      </ul>
-    </section>
+    <div class="right-column">
+      <div class="section">
+        <h2>Career Objective</h2>
+        <p>Aspiring DevOps/Site Reliability Engineer (SRE) with hands-on experience in cloud infrastructure management, server monitoring, and CI/CD pipeline deployments. Proficient in AWS, Linux, Shell Scripting, and Python, with a strong foundation in infrastructure automation and cloud-native tooling. Passionate about SRE principles and contributing to high-performance teams.</p>
+      </div>
 
-    <section>
-      <h2>Strengths</h2>
-      <ul>
-        <li>Strong communication and teamwork</li>
-        <li>Quick learner and adaptable</li>
-        <li>Positive attitude towards new tech</li>
-      </ul>
-    </section>
+      <div class="section">
+        <h2>Work Experience</h2>
+        <p><strong>Company:</strong> OnPassive Private Limited</p>
+        <p><strong>Role:</strong> Associate Cloud Engineer</p>
+        <p><strong>Duration:</strong> July 2023 to March 2025</p>
+        <ul>
+          <li>Designed and maintained CI/CD pipelines using Jenkins, Git, and GitHub Actions.</li>
+          <li>Monitored applications using CloudWatch, Nagios, and Prometheus with proactive alerting.</li>
+          <li>Managed AWS infrastructure (EC2, S3, IAM, VPC, CloudFormation).</li>
+          <li>Automated server tasks using Shell Scripting and Python.</li>
+          <li>Implemented IaC using Terraform and Ansible.</li>
+          <li>Collaborated with development teams on DevOps integration and agile support.</li>
+          <li>Handled incident response and reduced MTTR through root cause analysis.</li>
+          <li>Maintained detailed documentation for procedures and monitoring.</li>
+        </ul>
+      </div>
 
-    <section>
-      <h2>Personal Details</h2>
-      <span><strong>DOB:</strong> 10-09-1999</span>
-      <span><strong>Languages:</strong> English, Hindi, Telugu</span>
-      <span><strong>Address:</strong> H.No: -7-13A/3, Hanuman Nagar, Chandur, Hyderabad, Telangana – 508255</span>
-    </section>
+      <div class="section">
+        <h2>Technical Skills</h2>
+        <ul>
+          <li><strong>Cloud Services:</strong> EC2, ELB, SNS, CloudFormation, Auto Scaling, CloudFront, S3, Elastic Beanstalk</li>
+          <li><strong>DevOps Tools:</strong> Docker, Jenkins, Kubernetes, Ansible</li>
+          <li><strong>Version Control:</strong> Git, GitHub, GitLab, Bitbucket</li>
+          <li><strong>Programming:</strong> Python, C, Java, JavaScript</li>
+          <li><strong>Build & CI:</strong> Maven, Jenkins</li>
+          <li><strong>OS:</strong> Windows, Linux</li>
+          <li><strong>Office Tools:</strong> Outlook, Word, Excel, PowerPoint</li>
+        </ul>
+      </div>
 
-    <section>
-      <h2>Declaration</h2>
-      <p>I hereby declare that the above information is true and correct to the best of my knowledge and belief.</p>
-    </section>
-  </main>
-  <footer>
-    &copy; 2025 Ruchitha Katakam | Professional Portfolio
-  </footer>
+      <div class="section">
+        <h2>Education</h2>
+        <ul>
+          <li>B.Tech in EEE from Swami Ramananda Teertha Institute of Science and Technology, 8.4 CGPA (July 2021)</li>
+          <li>Intermediate from Gowthami Junior College, 97.2% (May 2017)</li>
+          <li>S.S.C from Krishnaveni Talent School, 9.8 CGPA (May 2015)</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
